--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
-  provider: ^6.0.4
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
